changed the home page

--- a/style.css
+++ b/style.css
@@ -26,11 +26,12 @@
 #RESPONSIVE DESIGN
 */
 
-@import url('https://fonts.googleapis.com/css?family=Concert+One|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Concert+One|Josefin+Sans:300,300i,400,700');
 
 /*
     font-family: 'Raleway', sans-serif;
     font-family: 'Concert One', cursive;
+    font-family: 'Josefin Sans', sans-serif;
 */
 
 #icon {
@@ -52,7 +53,7 @@
 
 body {
   background-color: #ffffff;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   color: #333333;
   font-size: 15px;
   overflow-x: hidden;
@@ -1611,6 +1612,7 @@ RESERVATION SECTION
   float: left;
   padding: 50px 0;
   width: 100%;
+  margin-top: 60px;
 }
 
 .mu-footer-area {
@@ -2034,4 +2036,264 @@ RESERVATION SECTION
 .mb-3 {
 
   font-family: 'Concert One', cursive;
+}
+
+
+#whyus-section {
+width: 100%;
+position: relative;
+display: flex;
+padding: 30px 0 25px 0;
+}
+
+
+.whyus-container, .menu-container, .mail-container {
+  width: 1200px;
+  padding: 0;
+}
+
+@media (max-width: 1220px) {
+  .whyus-container, .menu-container, .mail-container {
+    width: 90% !important;
+  }
+}
+
+.whyus-row {
+  background-color: #0accc7;
+  color: white;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+
+.whyus-pic {
+  padding: 0;
+  margin: 0;
+}
+
+.imageBlock {
+  width: 100%;
+}
+
+.imageBlock img {
+  width: 100%;
+}
+
+
+.whyus-text {
+  text-align: center;
+}
+
+.whyus-text .title {
+  margin: 25% auto 3px auto;
+  font-size: 2em;
+  font-weight: 400;
+  text-transform: uppercase;
+  /*font-family: 'Concert One', cursive;*/
+  letter-spacing: .05em;
+}
+
+.whyus-text .subtitle {
+  margin: 0 auto;
+  font-size: 1.4em;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.whyus-text .content {
+  width: 70%;
+  margin: 30px auto;
+  font-size: 1.125em;
+  font-weight: 300;
+}
+
+
+@media (max-width: 768px) {
+  .mail-form .form {
+    margin-bottom: 30px !important;
+  }
+  .mail-row .image {
+    display: none;
+  }
+
+
+
+  #whyus-section{
+    padding: 0px 0 25px 0;
+  }
+
+  .whyus-pic {
+    display: none;
+  }
+
+
+  .whyus-text .title {
+   margin-top: 30px !important;
+  }
+
+  .menu-title .description {
+    width: 90% !important;
+  }
+  .menu-title {
+    margin-bottom: 10px !important;
+  }
+
+  .menu-row .image {
+    margin-bottom: 10px;
+    padding: 0;
+  }
+
+
+}
+
+@media (max-width: 992px) {
+  #whyus-section {
+    padding-top: 35px;
+  }
+ .whyus-text .title {
+  margin-top: 50px !important;
+ }
+}
+
+@media (max-width: 1170px) {
+  .mail-form .form {
+    width: 70% !important;
+  }
+
+  #whyus-section {
+    padding-top: 30px;
+  }
+  .whyus-text .content {
+    width: 70% !important;
+  }
+}
+
+
+
+#menu-section {
+  margin-top: 40px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  padding: 25px 0 25px 0;
+  text-align: center;
+}
+
+.menu-row {
+  color: white;
+  padding: 0;
+  margin: 0;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.menu-title .title {
+  font-size: 2em;
+  text-transform: uppercase;
+  color: #0accc7;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
+.menu-title .title .line {
+  height: 2px;
+  width: 10%;
+  background-color: #0accc7;
+  margin: 0 auto;
+}
+
+.menu-title .description {
+  width: 50%;
+  margin: 0 auto;
+  line-height: 90%;
+  font-size: 1.125em;
+  font-weight: 300;
+  color: rgba(0,0,0,.4);
+}
+
+.menu-title {
+  margin-bottom: 50px;
+}
+
+.menu-row .image img {
+  width: 100%;
+}
+
+.menu-row .image .text {
+  position: absolute;
+  width: 100%;
+  top: 10%;
+  text-align: center;
+  color: white;
+  left: 0;
+  font-size: 1.4em;
+  font-weight: 300;
+}
+
+.menu-row .image .text .line {
+  height: 2px;
+  width: 10%;
+  background-color: white;
+  margin: 0 auto;
+}
+
+#mail-section {
+width: 100%;
+position: relative;
+display: flex;
+padding: 30px 0 25px 0;
+background-color: white;
+margin: 20px 0;
+}
+
+.mail-row {
+  color: white;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background-color: #0accc7;
+}
+
+.mail-form {
+  color: white;
+
+}
+
+.mail-form .form {
+  width: 50%;
+  margin: 15% auto 0 auto;
+}
+
+.mail-form .form .title {
+  font-size: 2em;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.mail-form .form .sub-title {
+  font-size: 1.125em;
+  font-weight: 300;
+  line-height: 90%;
+  margin: 10px 0 50px 0;
+}
+
+.mail-form .form input {
+  display: block;
+  width: 100%;
+  background-color: white;
+  color: #0accc7;
+  border: 0;
+  margin-top: 10px;
+}
+
+
+
+.mail-row .image {
+  padding: 0;
+  margin: 0;
+}
+
+.mail-row .image img {
+  width: 100%;
 }
